force-app/main/default/objects/CPM_Component_Update__e/CPM_Component_Update__e.object-meta.xml
<CustomObject>
    <description>Event signifying a change to an event that should be reflected in the front end interface.</description>
    <label>CPM Component Update</label>
    <pluralLabel>CPM Component Updates</pluralLabel>
</CustomObject>