force-app/main/default/objects/CPM_Component_Update__e/fields/Demo_Component_JSON__c.field-meta.xml
<CustomField>
    <fullName>Demo_Component_JSON__c</fullName>
    <label>Demo Component JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>