force-app/main/default/objects/CPM_Component_Update__e/fields/Insert_Flag__c.field-meta.xml
<CustomField>
    <fullName>Insert_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo Component Was Inserted</description>
    <label>Insert Flag</label>
    <type>Checkbox</type>
</CustomField>