force-app/main/default/objects/CPM_Component_Update__e/fields/Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo Component Was Updated</description>
    <label>Update Flag</label>
    <type>Checkbox</type>
</CustomField>